# emotion-ai

./: .gitignore  CLAUDE.md  README.md  master_plan.md  pyproject.toml
.claude/: settings.json
archive/: schemas_readout_unused.py
demo/: README.md  index.html
docs/: audit_v4.md  behavioral_validation_framework.md  emotion_taxonomy_neural_circuits.md  parameter_changes_log.md  parameter_rationale.md  phase9_ceiling.md  phase9_coarse_grained.md  phase9_dimensional_va.md  phase9_emotion_mapping.md  phase9_hybrid_control.md  phase9_lesion_specificity.md  phase9_multilabel.md  phase9_pop_lesion.md  phase9_readout_fix.md  phase9_results_full.md  phase9_results_initial.md  phase9_topk.md  portfolio_article_draft.md  portfolio_article_final.md  portfolio_article_v4.md
phase9/: __init__.py  baselines.py  ceiling_baselines.py  coarse_grained.py  dataset.py  dimensional.py  emotion_mapping.py  lesion_statistics.py  lesioned.py  majority_baseline.py  metrics.py  multilabel.py  pop_lesion.py  run_ceiling_eval.py  run_coarse_eval.py  run_eval.py  run_lesion_eval.py  run_multilabel_eval.py  run_pop_lesion_eval.py  run_topk_eval.py  run_va_eval.py  topk.py  valence_binary.py
scripts/: chat.py  emotion_brain_demo.py  emotion_brain_v2_demo.py  emotion_chat.py  evaluate_adex_direct.py  evaluate_izh_direct.py  evaluate_multitrial.py  fear_conditioning_demo.py  hybrid_chat.py  neuro_chat.py  optimize_adex.py  run_api.py  run_benchmark.py  run_full_validation.py  run_scenario.py  run_step0_validation.py  run_v2_validation.py  tonic_sweep.py  validate_baseline_rates.py  (+2 more)
(+163 files in other folders)
